--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Extract changed files
         id: changes
         run: |
-          changed_scripts=$(echo ${{ steps.filter.outputs.changed_files }} | jq -r '.[]')
+          changed_scripts="$( echo ${{ steps.filter.outputs.changed_files }} | jq -r '.[]' | cut -d'/' -f1 | sort | uniq | jq -s -R -c 'split("\n") | map(select(. != ""))')"
           echo "changed_scripts=${changed_scripts}" >> $GITHUB_OUTPUT
 
   lint-and-test:
