--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,14 @@ jobs:
           list-files: json
           filters: |
             changed:
-              - '*_script*/**'
+              - '*_script*/*.sh'
 
       - name: Extract changed files
         id: changes
         env:
           changed: ${{ steps.filter.outputs.changed_files }}
         run: |
-          changed_scripts="$( echo $changed | jq -r '.[]' | cut -d'/' -f1 | sort | uniq | jq -s -R -c 'split("\n") | map(select(. != ""))' )"
+          changed_scripts="$( echo $changed | jq -r '.[]' | jq -s -R -c 'split("\n") | map(select(. != ""))' )"
           echo "changed_scripts=${changed_scripts}" >> $GITHUB_OUTPUT
 
   lint-and-test:
@@ -43,8 +43,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+      
+      #- name: Build Docker image
+      #  run: docker build -t rhel8:latest .
 
-      - name: echo target
+      - name: Install ShellCheck and ShellSpec
         run: |
-          echo ${{ matrix.changed_script }} 
+          sudo apt-get update && sudo apt-get install -y shellcheck git curl
+          curl -fsSL https://git.io/shellspec | sh -s -- --yes && ln -s /root/.local/lib/shellspec/shellspec /usr/local/bin/
+
+      - name: Run ShellCheck
+        if: ${{ !contains(matrix.script_path, '_spec') }}
+        run: |
+          shellcheck --format=gcc --severity=error ${{ matrix.script_path }}
+          shellcheck --format=gcc --severity=error ${{ matrix.script_path }} | grep 'error' && exit 1
