--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
           curl -fsSL https://git.io/shellspec | sh -s -- --yes && ln -s /root/.local/lib/shellspec/shellspec /usr/local/bin/
 
       - name: Run ShellCheck
-        if: ${{ !contains(matrix.script_path, '_spec') }}
+        if: ${{ !contains(matrix.changed_script, '_spec') }}
         run: |
           echo "shell: $0"
           echo "# ShellCheck Result" >> $GITHUB_STEP_SUMMARY
@@ -70,6 +70,8 @@ jobs:
 
       - name: Run ShellSpec
         run: |
+          SCRIPT_DIR=$(echo ${{ matrix.changed_script }} | cut -d'/' -f1)
+          SCRIPT_FILE=$(basename ${{ matrix.changed_script }} | sed "s/_spec//g")
           cd $(echo ${{ matrix.changed_script }} | cut -d'/' -f1)
           shellspec --init
           chmod +x ${{ matrix.changed_script }}
