--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,13 +70,15 @@ jobs:
 
       - name: Run ShellSpec
         run: |
-          SCRIPT_DIR=$(echo ${{ matrix.changed_script }} | cut -d'/' -f1)
-          SCRIPT_FILE=$(basename ${{ matrix.changed_script }} | sed "s/_spec//g")
-          cd $SCRIPT_DIR
-          shellspec --init
-          chmod +x $SCRIPT_FILE
           echo "shell: $0"
           echo "# ShellSpec Result" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          SCRIPT_DIR=$(echo ${{ matrix.changed_script }} | cut -d'/' -f1)
+          SCRIPT_FILE=$(basename ${{ matrix.changed_script }} | sed "s/_spec//g")
+          cd $SCRIPT_DIR
+          pwd >> $GITHUB_STEP_SUMMARY
+          ls -l >> $GITHUB_STEP_SUMMARY
+          shellspec --init >> $GITHUB_STEP_SUMMARY
+          chmod +x $SCRIPT_FILE >> $GITHUB_STEP_SUMMARY
           shellspec >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
